[gd_scene load_steps=7 format=3 uid="uid://cm0xnh2mk17cn"]

[ext_resource type="Texture2D" uid="uid://bjaunth6jmdrg" path="res://assets/sprites/bg_gravestone.png" id="1_jrjpg"]
[ext_resource type="Script" path="res://scripts/gravestone.gd" id="1_v3c3n"]
[ext_resource type="Texture2D" uid="uid://bagujt40fp4ob" path="res://assets/sprites/bg_gravestone_stone.png" id="3_udrpt"]
[ext_resource type="Texture2D" uid="uid://bo3wmcubnlysx" path="res://assets/sprites/bg_gravestone_roboritter.png" id="4_ulgjv"]
[ext_resource type="Texture2D" uid="uid://bf7gwxxxfgifl" path="res://assets/sprites/bg_gravestone_raven.png" id="5_4v4ov"]
[ext_resource type="Texture2D" uid="uid://casq3pvsf1emp" path="res://assets/sprites/bg_gravestone_fox.png" id="6_tye5g"]

[node name="gravestone" type="Node2D"]
script = ExtResource("1_v3c3n")

[node name="gravestone" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_jrjpg")

[node name="gravestone_p1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_udrpt")

[node name="gravestone_p2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_ulgjv")

[node name="gravestone_p3" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_4v4ov")

[node name="gravestone_p4" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_tye5g")
